@@ -1,30 +1,31 @@
 package igentuman.bfr.client.gui;
 
-
-import java.util.Arrays;
-import javax.annotation.Nonnull;
-
-import igentuman.bfr.common.config.BetterFusionReactorConfig;
+import java.util.List;
 import mekanism.client.gui.GuiMekanismTile;
 import mekanism.client.gui.element.tab.GuiEnergyTab;
+import mekanism.client.gui.element.tab.GuiHeatTab;
 import mekanism.common.MekanismLang;
 import mekanism.common.inventory.container.tile.MekanismTileContainer;
+import mekanism.common.util.MekanismUtils;
+import mekanism.common.util.UnitDisplayUtils.TemperatureUnit;
 import mekanism.common.util.text.EnergyDisplay;
 import igentuman.bfr.client.gui.element.GuiFusionReactorTab;
 import igentuman.bfr.client.gui.element.GuiFusionReactorTab.FusionReactorTab;
 import igentuman.bfr.common.BfrLang;
 import igentuman.bfr.common.content.fusion.BFReactorMultiblockData;
 import igentuman.bfr.common.tile.fusion.TileEntityFusionReactorController;
-import mekanism.generators.common.GeneratorsLang;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.network.chat.Component;
 import net.minecraft.world.entity.player.Inventory;
+import org.jetbrains.annotations.NotNull;
 
 public class GuiFusionReactorController extends GuiMekanismTile<TileEntityFusionReactorController, MekanismTileContainer<TileEntityFusionReactorController>> {
 
     public GuiFusionReactorController(MekanismTileContainer<TileEntityFusionReactorController> container, Inventory inv, Component title) {
         super(container, inv, title);
         dynamicSlots = true;
+        imageWidth += 10;
+        inventoryLabelX += 5;
         titleLabelY = 5;
     }
 
@@ -34,32 +35,27 @@ public class GuiFusionReactorController extends GuiMekanismTile<TileEntityFusion
         if (tile.getMultiblock().isFormed()) {
             addRenderableWidget(new GuiEnergyTab(this, () -> {
                 BFReactorMultiblockData multiblock = tile.getMultiblock();
-                return Arrays.asList(MekanismLang.STORING.translate(EnergyDisplay.of(multiblock.energyContainer)),
-                      GeneratorsLang.PRODUCING_AMOUNT.translate(EnergyDisplay.of(multiblock.getPassiveGeneration(false, true))));
+                return List.of(MekanismLang.STORING.translate(EnergyDisplay.of(multiblock.energyContainer)),
+                      BfrLang.PRODUCING_AMOUNT.translate(EnergyDisplay.of(multiblock.getPassiveGeneration(false, true))));
             }));
+            addRenderableWidget(new GuiHeatTab(this, () -> {
+                BFReactorMultiblockData multiblock = tile.getMultiblock();
+                Component transfer = MekanismUtils.getTemperatureDisplay(multiblock.lastTransferLoss, TemperatureUnit.KELVIN, false);
+                Component environment = MekanismUtils.getTemperatureDisplay(multiblock.lastEnvironmentLoss, TemperatureUnit.KELVIN, false);
+                return List.of(MekanismLang.TRANSFERRED_RATE.translate(transfer), MekanismLang.DISSIPATED_RATE.translate(environment));
+            }));
+
             addRenderableWidget(new GuiFusionReactorTab(this, tile, FusionReactorTab.HEAT));
             addRenderableWidget(new GuiFusionReactorTab(this, tile, FusionReactorTab.FUEL));
             addRenderableWidget(new GuiFusionReactorTab(this, tile, FusionReactorTab.STAT));
-            addRenderableWidget(new GuiFusionReactorTab(this, tile, FusionReactorTab.EFFICIENCY));
         }
     }
 
     @Override
-    protected void drawForegroundText(@Nonnull GuiGraphics matrix, int mouseX, int mouseY) {
-        drawTitleText(matrix, GeneratorsLang.FUSION_REACTOR.translate(), titleLabelY);
-        drawString(matrix, MekanismLang.MULTIBLOCK_FORMED.translate(), 8, 16, titleTextColor());
-        if(tile.getMultiblock().isBurning()) {
-            if(tile.getMultiblock().getEfficiency() >= 80) {
-                drawString(matrix, BfrLang.EFFICIENCY_GOOD.translate(), 8, 70, 0x097969);
-            } else {
-                drawString(matrix, BfrLang.EFFICIENCY_BAD.translate(), 8, 60, 0xC70039);
-                if(BetterFusionReactorConfig.bfr.reactorMeltdown.get() && BetterFusionReactorConfig.bfr.reactorExplosionRadius.get() > 0) {
-                    drawString(matrix, BfrLang.MIGHT_EXPLODE.translate(), 8, 70, 0xC70039);
-                } else {
-                    drawString(matrix, BfrLang.MIGHT_TURNOFF.translate(), 8, 70, 0xC70039);
-                }
-            }
-        }
-        super.drawForegroundText(matrix, mouseX, mouseY);
+    protected void drawForegroundText(@NotNull GuiGraphics guiGraphics, int mouseX, int mouseY) {
+        renderTitleText(guiGraphics);
+        renderInventoryText(guiGraphics);
+        drawScrollingString(guiGraphics, MekanismLang.MULTIBLOCK_FORMED.translate(), 0, 16, TextAlignment.LEFT, titleTextColor(), 13, false);
+        super.drawForegroundText(guiGraphics, mouseX, mouseY);
     }
 }
